--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,13 +1,41 @@
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 500vh;
 }
 
-model-viewer {
-  width: 50%;
-  height: 90%;
-  background-color: #000000;
-  left: 50%
+.model {
+  position: fixed;
+  transition: left 0.5s, right 0.5s;
+  width: 100%;
+  height: 100vh;
+  left: 25%;
+  right: 0%;
+  margin: auto;
+  z-index: 2;
+}
+
+.l {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  right: 0%;
+  margin: auto;
+}
+
+.progress-container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgb(255, 255, 255);
+  z-index: 0;
+}
+
+.progress-bar {
+  height: 100%;
+  background: #8ef0ff;
+  right: 100%;
+  width: 0%;
+  z-index: 1;
 }
